Fixed Issue where tech page loaded incorrectly on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -112,8 +112,6 @@
 
 .Flex {
   display: flex;
-  height: 300px;
-
   flex-wrap: wrap;
   justify-content: center;
 }
